tests/rosetta/out/C/brazilian-numbers.error
cc: exit status 1
/tmp/brazilian-numbers.c: In function ‘mochi_main’:
/tmp/brazilian-numbers.c:94:16: warning: initialization of ‘int’ from ‘char *’ makes integer from pointer without a cast [-Wint-conversion]
   94 |     int kind = kinds.data[tmp1];
      |                ^~~~~
/tmp/brazilian-numbers.c:95:38: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
   95 |     printf("%s\n", "First 20" + kind + "Brazilian numbers:");
      |                    ~~~~~~~~~~~~~~~~~ ^
      |                               |      |
      |                               char * char *
/tmp/brazilian-numbers.c:109:17: warning: comparison between pointer and integer
  109 |       if ((kind == " ")) {
      |                 ^~
/tmp/brazilian-numbers.c:111:24: warning: comparison between pointer and integer
  111 |       } else if ((kind == " odd ")) {
      |                        ^~
