tests/rosetta/out/C/brazilian-numbers.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:46Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:46Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
int sameDigits(int n, int b) {
  int f = n % b;
  n = (int)((((double)n) / ((double)b)));
  while (n > 0) {
    if (n % b != f) {
      return 0;
    }
    n = (int)((((double)n) / ((double)b)));
  }
  return 1;
}

int isBrazilian(int n) {
  if (n < 7) {
    return 0;
  }
  if (n % 2 == 0 && n >= 8) {
    return 1;
  }
  int b = 2;
  while (b < n - 1) {
    if (sameDigits(n, b)) {
      return 1;
    }
    b = b + 1;
  }
  return 0;
}

int isPrime(int n) {
  if (n < 2) {
    return 0;
  }
  if (n % 2 == 0) {
    return n == 2;
  }
  if (n % 3 == 0) {
    return n == 3;
  }
  int d = 5;
  while (d * d <= n) {
    if (n % d == 0) {
      return 0;
    }
    d = d + 2;
    if (n % d == 0) {
      return 0;
    }
    d = d + 4;
  }
  return 1;
}

int mochi_main() {
  list_string kinds = list_string_create(3);
  kinds.data[0] = " ";
  kinds.data[1] = " odd ";
  kinds.data[2] = " prime ";
  for (int tmp1 = 0; tmp1 < 3; tmp1++) {
    int kind = kinds.data[tmp1];
    printf("%s\n", "First 20" + kind + "Brazilian numbers:");
    int c = 0;
    int n = 7;
    while (1) {
      if (isBrazilian(n)) {
        char *tmp2 = _str(n);
        char *tmp3 = concat_string(tmp2, " ");
        printf("%s\n", tmp3);
        c = c + 1;
        if (c == 20) {
          printf("\\n\n");
          break;
        }
      }
      if ((kind == " ")) {
        n = n + 1;
      } else if ((kind == " odd ")) {
        n = n + 2;
      } else {
        while (1) {
          n = n + 2;
          if (isPrime(n)) {
            break;
          }
        }
      }
    }
  }
  int n = 7;
  int c = 0;
  while (c < 100000) {
    if (isBrazilian(n)) {
      c = c + 1;
    }
    n = n + 1;
  }
  char *tmp4 = _str(n - 1);
  char *tmp5 = concat_string("The 100,000th Brazilian number: ", tmp4);
  printf("%s\n", tmp5);
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
